--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: 50;
+    text-align: center;
     
 }
 
@@ -18,6 +19,7 @@ img{
 
 body{
     background-color: rgb(230, 249, 255);
+    text-align: center;
 }
 
 h2{
